[package]
name = "rl-session"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
boxcars = "0.9.10"
clap = { version = "4.3.5", features = ["derive"] }
indoc = "2.0.1"
notify = "6.0.1"
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["macros"] }
webhook = "2.1.2"
whoami = "1.4.0"
